--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,8 @@
     <title>Rats Alive</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="Kill rats by hovering over them with your mouse (yes, pun intendet)."
-    />
-    <link
-      rel="icon"
-      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%221em%22 font-size=%2280%22>🐀</text></svg>"
-    />
+    <meta name="description" content="Kill rats by hovering over them with your mouse (yes, pun intendet)." />
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%221em%22 font-size=%2280%22>🐀</text></svg>" />
   </head>
   <body>
     <app-root></app-root>
